Blog metadate gets parsed!

--- a/app/content/posts/welcome.mdx
+++ b/app/content/posts/welcome.mdx
@@ -1,3 +1,9 @@
+---
+title: I made this blog 
+author: M.Anand
+date: 2nd November, 2025
+slug: home
+---
 import MdxLayout from '../../../components/mdx-layout'
  
 # Welcome to my MDX page!
