Bloglink element implemented!

--- a/app/content/posts/test-1.mdx
+++ b/app/content/posts/test-1.mdx
@@ -1,13 +1,15 @@
 ---
-title: I made this blog 
-date: 2nd November, 2025
+title: I hate VsCode
+date: 22nd November, 2025
 slug: home
 ---
 import MdxLayout from '../../../components/mdx-layout'
  
-# Welcome to my MDX page!
+# I hate VsCode
  
-This is some **bold** and _italics_ text.
+I **hate** it!
+
+*Especially* VsCode's stupid slow speed, I 'ate it!
 
 This is a list in markdown:
 - One
